--- a/Webseite/html/meinKochbuch.html
+++ b/Webseite/html/meinKochbuch.html
@@ -153,9 +153,9 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>				
+					<a href="./recipes_in/Rindersteak.html"><img src="../media/foodpictures/Rindersteak.JPG" alt="Rindersteak"/>			
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Zartes Rindersteak</p>
 						</div>
 					</a>
 				</div>
