--- a/Webseite/html/index.html
+++ b/Webseite/html/index.html
@@ -188,9 +188,9 @@
 
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>	
+					<a href="./recipes_in/Curry.html"><img src="../media/foodpictures/Curry.JPG" alt="gebratener Spargel mit Kartoffel und Bacon"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Thai Curry</p>
 						</div>
 					</a>
 				</div>
