--- a/Webseite/html/index_justloggedout.html
+++ b/Webseite/html/index_justloggedout.html
@@ -183,7 +183,7 @@
 
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Curry.html"><img src="../media/foodpictures/Curry.JPG" alt="gebratener Spargel mit Kartoffel und Bacon"/>		
+					<a href="./recipes_in/Curry.html"><img src="../media/foodpictures/Curry.JPG" alt="Curry"/>		
 						<div class="recipe-title">
 							<p>Thai Curry</p>
 						</div>
@@ -191,9 +191,9 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>		
+					<a href="./recipes_in/Hirschgulasch.html"><img src="../media/foodpictures/Hirschgulasch.JPG" alt="Hirschgulasch"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Hirschgulasch</p>
 						</div>
 					</a>
 				</div>
