--- a/Webseite/html/meinKochbuch.html
+++ b/Webseite/html/meinKochbuch.html
@@ -201,9 +201,9 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>	
+					<a href="./recipes_in/Chili_con_Carne.html"><img src="../media/foodpictures/Chili_con_Carne.JPG" alt="Chili con Carne"/>
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Chili con Carne</p>
 						</div>
 					</a>
 				</div>
@@ -218,17 +218,17 @@
 
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>
+					<a href="./recipes_in/Pizza.html"><img src="../media/foodpictures/Pizza.JPG" alt="Pizza"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Pizza</p>
 						</div>
 					</a>
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>	
+					<a href="./recipes_in/Reis-Pilaw.html"><img src="../media/foodpictures/Reis-Pilaw.JPG" alt="Reis-Pilaw"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>indischer Pilaw</p>
 						</div>
 					</a>
 				</div>
