--- a/Webseite/html/filter_out.html
+++ b/Webseite/html/filter_out.html
@@ -150,9 +150,9 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>				
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>			
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Griechischer Brotsalat</p>
 						</div>
 					</a>
 				</div>
@@ -183,9 +183,9 @@
 
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Pfannen_Pasta.JPG" alt="Pfannen Pasta"/>			
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Pfannen Pasta</p>
 						</div>
 					</a>
 				</div>
