--- a/Webseite/html/index_out.html
+++ b/Webseite/html/index_out.html
@@ -210,17 +210,17 @@
 
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>	
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Pizza.JPG" alt="Pizza"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Pizza</p>
 						</div>
 					</a>
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>		
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Reis-Pilaw.JPG" alt="Reis-Pilaw"/>		
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>indischer Pilaw</p>
 						</div>
 					</a>
 				</div>
@@ -234,25 +234,25 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>		
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Griechischer Brotsalat</p>
 						</div>
 					</a>
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>	
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Pfannen_Pasta.JPG" alt="Pfannen Pasta"/>
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Pfannen Pasta</p>
 						</div>
 					</a>
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>		
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Chili_con_Carne.JPG" alt="Chili con Carne"/>
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Chili con Carne</p>
 						</div>
 					</a>
 				</div>
