--- a/Webseite/html/search_out.html
+++ b/Webseite/html/search_out.html
@@ -150,9 +150,9 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="#"><div class="placeholder"></div>				
+					<a href="./recipes_out/Griechischer Brotsalat.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
 						<div class="recipe-title">
-							<p>placeholder</p>
+							<p>Griechischer Brotsalat</p>
 						</div>
 					</a>
 				</div>
