--- a/Webseite/html/index_out.html
+++ b/Webseite/html/index_out.html
@@ -234,7 +234,7 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
+					<a href="./recipes_out/Griechischer Brotsalat.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
 						<div class="recipe-title">
 							<p>Griechischer Brotsalat</p>
 						</div>
