--- a/Webseite/html/allrecipes_out.html
+++ b/Webseite/html/allrecipes_out.html
@@ -209,7 +209,7 @@
 
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Pizza.html"><img src="../media/foodpictures/Pizza.JPG" alt="Pizza"/>		
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Pizza.JPG" alt="Pizza"/>		
 						<div class="recipe-title">
 							<p>Pizza</p>
 						</div>
@@ -217,7 +217,7 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Reis-Pilaw.html"><img src="../media/foodpictures/Reis-Pilaw.JPG" alt="Reis-Pilaw"/>		
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Reis-Pilaw.JPG" alt="Reis-Pilaw"/>		
 						<div class="recipe-title">
 							<p>indischer Pilaw</p>
 						</div>
@@ -233,7 +233,7 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Griechischer Brotsalat.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
+					<a href="./recipes_out/Griechischer Brotsalat.html"><img src="../media/foodpictures/Griechischer Brotsalat.JPG" alt="Griechischer Brotsalat"/>
 						<div class="recipe-title">
 							<p>Griechischer Brotsalat</p>
 						</div>
@@ -241,7 +241,7 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Pfannen_Pasta.html"><img src="../media/foodpictures/Pfannen_Pasta.JPG" alt="Pfannen Pasta"/>
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Pfannen_Pasta.JPG" alt="Pfannen Pasta"/>
 						<div class="recipe-title">
 							<p>Pfannen Pasta</p>
 						</div>
@@ -249,7 +249,7 @@
 				</div>
 
 				<div class="recipe-tile">
-					<a href="./recipes_in/Chili_con_Carne.html"><img src="../media/foodpictures/Chili_con_Carne.JPG" alt="Chili con Carne"/>
+					<a href="./recipes_out/recipe.html"><img src="../media/foodpictures/Chili_con_Carne.JPG" alt="Chili con Carne"/>
 						<div class="recipe-title">
 							<p>Chili con Carne</p>
 						</div>
