erste Version der Webseite
nochmal Überarbeitet um Filtern und Suche konsistenter zu gestalten.

--- a/ersteVersionDerWebseite/html/addrecipe.html
+++ b/ersteVersionDerWebseite/html/addrecipe.html
@@ -64,7 +64,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button onclick="location.href='./search.html'" class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
