--- a/ersteVersionDerWebseite/html/allrecipes.html
+++ b/ersteVersionDerWebseite/html/allrecipes.html
@@ -62,7 +62,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -197,6 +197,14 @@
 					<a href="./recipes_in/Hirschgulasch.html"><img src="../media/foodpictures/Hirschgulasch.jpg" alt="Hirschgulasch"/>		
 						<div class="recipe-title">
 							<p>Hirschgulasch</p>
+						</div>
+					</a>
+				</div>
+
+				<div class="recipe-tile">
+					<a href="./recipes_in/Rucolasalat.html"><img src="../media/foodpictures/Rucolasalat.JPG" alt="Rucolasalat"/>
+						<div class="recipe-title">
+							<p>Rucolasalat</p>
 						</div>
 					</a>
 				</div>
