--- a/ersteVersionDerWebseite/html/filter_out.html
+++ b/ersteVersionDerWebseite/html/filter_out.html
@@ -59,7 +59,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search_out.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -184,6 +184,14 @@
 					<a href="./recipes_out/Griechischer Brotsalat.html"><img src="../media/foodpictures/Griechischer Brotsalat.jpg" alt="Griechischer Brotsalat"/>
 						<div class="recipe-title">
 							<p>Griechischer Brotsalat</p>
+						</div>
+					</a>
+				</div>
+
+				<div class="recipe-tile">
+					<a href="./recipes_in/Rucolasalat.html"><img src="../media/foodpictures/Rucolasalat.JPG" alt="Rucolasalat"/>
+						<div class="recipe-title">
+							<p>Rucolasalat</p>
 						</div>
 					</a>
 				</div>
