--- a/ersteVersionDerWebseite/html/index_justloggedout.html
+++ b/ersteVersionDerWebseite/html/index_justloggedout.html
@@ -59,7 +59,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search_out.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -180,7 +180,6 @@
 					</a>
 				</div>
 
-
 				<div class="recipe-tile">
 					<a href="./recipes_out/Curry.html"><img src="../media/foodpictures/Curry.jpg" alt="Curry"/>		
 						<div class="recipe-title">
@@ -204,7 +203,6 @@
 						</div>
 					</a>
 				</div>
-
 
 				<div class="recipe-tile">
 					<a href="./recipes_out/Pizza.html"><img src="../media/foodpictures/Pizza.jpg" alt="Pizza"/>		
