--- a/ersteVersionDerWebseite/html/index_out.html
+++ b/ersteVersionDerWebseite/html/index_out.html
@@ -59,7 +59,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search_out.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
