--- a/ersteVersionDerWebseite/html/recipes_out/Haferflockenkekse.html
+++ b/ersteVersionDerWebseite/html/recipes_out/Haferflockenkekse.html
@@ -61,7 +61,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="../search_out.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -162,7 +162,7 @@
 						<tr>	<td>250 g</td>		<td>Haferflocken</td>	</tr>
 						<tr>	<td>100 g</td>		<td>Mehl</td>	</tr>
 						<tr>	<td>1 Pck</td>		<td>Backpulver</td>	</tr>
-						<tr>	<td>optional</td>	<td>Schokostückchen, Zimt, Rsinen, Nüsse</td>	</tr>
+						<tr>	<td>optional</td>	<td>Schokostückchen, Zimt, Rosinen, Nüsse</td>	</tr>
 					</table>
 
 				</div>
