--- a/ersteVersionDerWebseite/html/search.html
+++ b/ersteVersionDerWebseite/html/search.html
@@ -62,7 +62,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button onclick="location.href='./search.html'" class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -138,7 +138,7 @@
 
 			<section class="welcome">
 				<span class="request"> Suchergebnisse für: </span>
-				<span class="term"> Gemüse, einfach </span>
+				<span class="term"> Gemüse </span>
 			</section>
 
 
