--- a/ersteVersionDerWebseite/html/allrecipes_out.html
+++ b/ersteVersionDerWebseite/html/allrecipes_out.html
@@ -60,7 +60,7 @@
 			<!-- Suchfeld -->
 			<div class="greyarea">
 				<form action="./search_out.html">
-					<input type="text" name="search" placeholder="Plätzchen"></input>
+					<input type="text" name="search" placeholder="Gemüse"></input>
 					<button class="icon"><i class="fa fa-search"></i></button>
 					<p class="help">Suche nach einem beliebigen Stichwort, einer Zutat, einem Rezepttitel, ...</p>
 				</form>
@@ -194,6 +194,14 @@
 					<a href="#"><div class="placeholder"></div>
 						<div class="recipe-title">
 							<p>placeholder</p>
+						</div>
+					</a>
+				</div>
+
+				<div class="recipe-tile">
+					<a href="./recipes_in/Rucolasalat.html"><img src="../media/foodpictures/Rucolasalat.JPG" alt="Rucolasalat"/>
+						<div class="recipe-title">
+							<p>Rucolasalat</p>
 						</div>
 					</a>
 				</div>
