nochmal kleine Anpassung
gefiltert wird jetzt nach Mittag und vegetarisch, damit das alles passt.

--- a/ersteVersionDerWebseite/html/filter_out.html
+++ b/ersteVersionDerWebseite/html/filter_out.html
@@ -135,7 +135,7 @@
 
 			<section class="welcome">
 				<span class="request"> Rezepte in der Kategorie: </span>
-				<span class="term"> herzhaft, vegetarisch </span>
+				<span class="term"> Mittag & Abend, vegetarisch </span>
 			</section>
 
 
