--- a/Webseite/html/recipes_in/Rindersteak.html
+++ b/Webseite/html/recipes_in/Rindersteak.html
@@ -146,7 +146,7 @@
 			<!-- Recipe content -->
 			<div class="recipe-content">
 				<h1>Zartes Rindersteak</h1>
-
+<!-- Quelle: https://www.google.de/imgres?imgurl=http%3A%2F%2Fwww.adpic.de%2Fdata%2Fpicture%2Fdetail%2FRindersteak_503571.jpg&imgrefurl=http%3A%2F%2Fwww.adpic.de%2Flizenzfreie_bilder%2FLebensmittel%2FFleisch%2FRindersteak_503571.html&docid=J9Hq-2-_nR4-iM&tbnid=Gh38AEGTrwYJiM%3A&vet=1&w=375&h=248&bih=619&biw=1884&q=Rindersteak&ved=0ahUKEwi51oasy_bRAhWEVhoKHWTTCbgQMwg1KAQwBA&iact=mrc&uact=8#h=248&imgrc=Gh38AEGTrwYJiM:&vet=1&w=375 -->
 				<div class="recipe-img-big">
 					<img src="../../media/foodpictures/Rindersteak.JPG" alt="Gebratener Spargel mit Kartoffeln und Bacon"/>
 				</div>
